|
Quick Lists
|
|
Bug ID:
|
6730514
|
|
Votes
|
0
|
|
Synopsis
|
assertion failure in mangling code when expanding by 0 bytes
|
|
Category
|
hotspot:garbage_collector
|
|
Reported Against
|
|
|
Release Fixed
|
hs14(b03)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
3-Medium
|
|
Related Bugs
|
6736341
,
6742207
|
|
Submit Date
|
28-JUL-2008
|
|
Description
|
The assertion
assert(object_space()->end() < virtual_space_high,
"Should be true before post_resize()");
in PSOldGen::expand_by().
Posted Date : 2008-07-28 15:45:19.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
The problem is that a call to expand() by 0 bytes was made where the 0 bytes
value was the result of an align up of the requested bytes and the align up
caused a wrap around to 0.
Posted Date : 2008-07-28 15:45:19.0
http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/818a18cd69a8
Posted Date : 2008-07-31 21:04:55.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |